# eigen-challenge

./: .envrc  .gitignore  README.md  docker-compose.yml  flake.nix  lefthook.yml  pyproject.toml  treefmt.toml
.github/workflows/: release.yml
comb/_QUEEN/: devshells.nix
dagster_output/: count_ocurrences_nltk  count_ocurrences_scikit  count_ocurrences_spacy  load_documents  search_most_common_nltk  search_most_common_scikit  search_most_common_spacy
dev/: example.py
dev/dagster_skeleton/: README.md  pyproject.toml  setup.cfg  setup.py
dev/processed/: doc2.txt  doc3.txt  doc5.txt  doc6.txt
eigen/: __init__.py  assets.py  cli.py  db.py  nlp.py  output.py
output/nltk/: doc1.txt  doc4.txt
tests/: conftest.py  test_preprocess.py  test_search.py  test_wordcounter.py
